[tool.poetry]
name = "action-figure-store"
version = "0.1.0"
description = "Action API"
authors = ["Mateus Sanches"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pytest = "^7.4.3"
factory-boy = "^3.3.0"
django = "4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
